# IOT_Access_Control_System_Based_on_Biometric_Recongnition

./: README.md  face_master.cpp  face_master.hpp
Release_version/arduino/: CMakeLists.txt  LinuxSerial.cpp  recevie_Arduino_Command.cpp
Release_version/face_v5.0/: CMakeLists.txt  LinuxSerial.hpp  face_master.cpp  face_master.hpp  master.cpp
Release_version/face_v5.0/face_data/: MyFaceFisherModel.xml  creat_csv.py  csv.txt
Release_version/face_v5.0/receive_arduino_data/: ARDUINO_COMMAND.txt  save_Arduino_Data
code_lock_v3.0/: code_lock_v3.0_2 (有serial).ino
code_lock_v3.0/code_lock_v3.0_1/: code_lock_v3.0_1.ino
code_lock_v3.0/code_lock_v3.0_2/: code_lock_v3.0_2.ino
code_lock_v3.0/code_lock_v3.0_3/: code_lock_v3.0_3.ino
code_lock_v3.0/temp/: temp.ino
code_lock_v3.0_3/: code_lock_v3.0_3.ino
coded_lock_v4.0/code_lock_v4.0_1/: code_lock_v4.0_1.ino
coded_lock_v4.0/code_lock_v4.0_2/: code_lock_v4.0_2.ino
coded_lock_v4.0/code_lock_v4.0_3/: code_lock_v4.0_3.ino  code_lock_v4.1_3.ino
coded_lock_v4.1/code_lock_v4.1_1/: code_lock_v4.1_1.ino
coded_lock_v4.1/code_lock_v4.1_2/: code_lock_v4.1_2.ino
coded_lock_v4.1/code_lock_v4.1_3/: code_lock_v4.1_3.ino
coded_lock_v4.2/code_lock_v4.2_2/: code_lock_v4.2_2.ino
coded_lock_v4.2/code_lock_v4.2_3/: code_lock_v4.2_3.ino
coded_lock_v5.0/: README.md
face_v3.1/: README.md
face_v3.1/main/: main.cpp  (+2 more)
face_v4.0/: CMakeLists.txt  LinuxSerial.cpp  face_master.cpp  face_master.hpp  master.cpp
mail_send/: mail.txt
论文/: OpenCV在人脸门禁系统的研究与应用_公衍宇.caj  基于OpenCV的人脸识别系统的设计与实现_卜秋月.caj  文献检索与综述-17170120015-任俊杰.doc
(+31 files in other folders)
